--- a/style.css
+++ b/style.css
@@ -235,7 +235,7 @@ nav li:first-child{
   background-size: cover;
   background-position: initial;
   width: 100%;
-  height: 92vh;
+  height: auto;
 }
 
 .profile{
