--- a/style.css
+++ b/style.css
@@ -276,6 +276,9 @@ nav li:first-child{
     font-weight: bolder;
     letter-spacing: 0;
   }
+  . important {
+    height: auto;
+  }
 }
 
 /* Typing animation for .typing class */
